--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 h1 {
   margin-top: 30px;
-  font-size: 40px;
+  font-size: 30px;
   text-align: center;
 }
 
@@ -33,19 +33,23 @@ img {
 
 .button {
   font-weight: bolder;
-  font-size: 18px;
+  font-size: 15px;
   margin: 30px;
   font-family: monaco;
   border-radius: 10px;
-  background-color: orange;
-  border-color: orange;
+  background-color: white;
+  border-color: black;
   color: black;
   padding: 10px;
 }
 
+.button:active {
+  text-decoration: underline;
+}
+
 .footer {
   margin: auto;
-  margin-top: 50px;
+  margin-top: 70px;
   text-align: center;
   font-size: 12px;
 }
@@ -62,6 +66,7 @@ img {
     margin-top: 30px;
     width: 100%;
     text-align: center;
+    font-size: 40px;
   }
 
   p {
@@ -89,19 +94,47 @@ img {
     margin: 30px;
     font-family: monaco;
     border-radius: 10px;
-    background-color: orange;
-    border-color: orange;
-    color: white;
+    border: 1px solid black;
+    background-color: white;
+    color: black;
     padding: 10px;
+  }
+
+  .callToAction:after {
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: #000;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+  }
+
+  .callToAction:hover:after {
+    width: 100%;
+    left: 0;
   }
 
   .footer {
     margin: auto;
-    margin-top: 50px;
+    margin-top: 70px;
     margin-bottom: 10px;
     text-align: center;
     font-size: 12px;
     bottom: 0;
     width: 100%;
+  }
+
+  .callToAction {
+    font-size: 13px;
+    color: black;
+    border-bottom: solid black 0px;
+    text-decoration: none;
+    display: inline-block;
+    padding: 5px;
+    position: relative;
   }
 }
